--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 import sys
+import sqlite3
 
 from PyQt5 import uic
-from PyQt5.QtWidgets import QApplication, QMainWindow
+from PyQt5.QtWidgets import QApplication, QMainWindow, QWidget, QTableWidgetItem, QMessageBox
 from PyQt5.QtSql import QSqlDatabase, QSqlTableModel
