--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-import sys
-import sqlite3
-
-from PyQt5 import uic
-from PyQt5.QtWidgets import QApplication, QMainWindow, QWidget, QTableWidgetItem, QMessageBox
-from PyQt5.QtSql import QSqlDatabase, QSqlTableModel
+PyQt5==5.15
+pyqt5-tools
